2008-05-18  Sebastien DIAZ  <sebastien.diaz@gmail.com>
	
	Corrected Bugs
	#23253  Queries with a charset suffix in the content type do not get parsed from Frédéric Sagnes
	#22885  Missing includes in HTMLElement.cpp from  Chris Butler
	#22517  Version 3.2.5 identifies itself as version 3.2.4  
	#22177  Install example/cgicc.m4 per default  from   Tiziano Müller
	#22176  Remove stray @GNUCAP_LDFLAGS@  Fixed  from   Tiziano Müller
	
	Added Patches
	#6510  Queries with a charset suffix in the content type do not get parsed from    Frédéric Sagnes
	#6385  Fix wrong htmldir/docdir handling in doc/Makefile.am  from   Tiziano Müller


2008-01-19  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* cgicc/CgiUtils.h: Just little change
	* cgicc/HTTPXHTMLHeader.cpp,cgicc/HTTPXHTMLHeader.h,cgicc/XHTMLDoctype.cpp,
	and cgicc/XHTMLDoctype.h, cgicc/XMLDeclaration.h, XMLPI.cpp
	and   XMLPI.h : Add the XHTML support from David Roberts work
	* cgicc/Makefile.am: Change for darwin (apple) test .
	* example/Config.h.in: an empty file just for autogen
	* example/acinclude.m4: more usable make
	* example/autogen: enhance making work
	* example/configure.ac: enhance the making system
	

2007-07-15  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* demo/cardgame.cpp: A new demo based on a card game with persistance data,AI,Scoring, ...


2007-07-02  Sebastien DIAZ  <sebastien.diaz@gmail.com>

	* all source: Change the license LGPL to the version 3


2004-11-06  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/CgiUtils.cpp: Fixed bug in extractBetween, now use
	size_type (bug reported by slava@perlx.com)
	* THANKS: added Vyacheslav Ignatyuk

2004-06-29  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/Cgicc.cpp: Parse both GET and POST data if present
	* demo/*.cpp: Demos made into stand-alone applications
	* cgicc/Cgicc.cpp: Improved form data parsing efficiency
	* cgicc/Cgicc.cpp: Removed parsePair

2004-06-27  Stephen F. Booth  <sbooth@gnu.org>
